<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home_48px"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_receipt_long_48px"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_table_rows_48px"
        android:title="@string/title_library" />
    <item
        android:id="@+id/navigation_entries"
        android:icon="@drawable/ic_description_48px"
        android:title="@string/title_entries" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_48px"
        android:title="@string/title_settings" />

</menu>